--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GetBaked-8a39250f-1282-4899-810d-3f762cfad3ec;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //local
+    //"DefaultConnection": "Server=LENOVO-EDER;Database=GetBaked;Integrated Security=true;TrustServerCertificate=true"
+    //azure
+    "DefaultConnection": "Server=gc200495033.database.windows.net;Database=gc200495033;User Id=gc200495033;Password=gceder1234*;"
   },
   "Logging": {
     "LogLevel": {
