Lab 3: GitHub Login DONE

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
     //local
-    //"DefaultConnection": "Server=LENOVO-EDER;Database=GetBaked;Integrated Security=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=LENOVO-EDER;Database=GetBaked;Integrated Security=true;TrustServerCertificate=true"
     //azure
-    "DefaultConnection": "Server=gc200495033.database.windows.net;Database=gc200495033;User Id=gc200495033;Password=gceder1234*;"
+    //"DefaultConnection": "Server=gc200495033.database.windows.net;Database=gc200495033;User Id=gc200495033;Password=gceder1234*;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,5 +11,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "7211454560-5iv3ki73nhijvo25tvovqorttvnqual6.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "GitHub": {
+      "ClientId": "912bb7cc9407dd99f242",
+      "ClientSecret": "a9a338cbb9a753f47a89849b77868e35b5fbd0b3"
+    }
+  }
 }
